not correct rending to AboutDesign

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -25,3 +25,12 @@ body {
   width: 1169px;
   margin: 0 auto;
 }
+.title {
+  font-weight: 800;
+  font-size: 32px;
+  line-height: 125%;
+
+  text-align: center;
+
+  color: #111111;
+}
