--- a/src/styles/aboutDesign.scss
+++ b/src/styles/aboutDesign.scss
@@ -2,7 +2,16 @@
 .design {
   width: 100%;
   padding: 110px 0;
+  position: relative;
   background-color: $secondary;
+  &__content {
+    &::after {
+      content: url("../images/bag.png");
+      position: absolute;
+      right: 100px;
+      bottom: 92px;
+    }
+  }
   &__title {
     margin-bottom: 84px;
   }
