chenge img with svg to png,added MoreInformations

--- a/src/styles/aboutDesign.scss
+++ b/src/styles/aboutDesign.scss
@@ -6,7 +6,7 @@
   background-color: $secondary;
   &__content {
     &::after {
-      content: url("../images/bag.png");
+      content: url("../images/aboutDesign/bag.png");
       position: absolute;
       right: 100px;
       bottom: 92px;
