--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,6 +2,8 @@
 body {
   font-family: "Montserrat", sans-serif;
   overflow-x: hidden;
+  max-width: 1920px;
+  margin: 0 auto;
 }
 .button {
   background: $green;
