--- a/src/styles/aboutDeveloper.scss
+++ b/src/styles/aboutDeveloper.scss
@@ -26,8 +26,7 @@
   }
   &__item {
     display: flex;
-    min-width: 694px;
-    min-height: 391px;
+    min-width: 60%;
     border: 2px solid #67aefc;
     border-radius: 15px;
     justify-content: center;
