--- a/src/styles/MoreInformations.scss
+++ b/src/styles/MoreInformations.scss
@@ -15,7 +15,7 @@
     gap: 35px;
   }
   &__content {
-    min-width: 670px;
+    min-width: 58%;
     margin-top: 79px;
     h2 {
       text-align: left;
