--- a/src/styles/exemples.scss
+++ b/src/styles/exemples.scss
@@ -26,8 +26,7 @@
     margin-top: 51px;
   }
   &__item {
-    width: 567px;
-    height: 447px;
+    width: 49%;
     border-radius: 15px;
     color: #fff;
     transition: 0.3s;
@@ -51,7 +50,8 @@
       line-height: 175%;
     }
     img {
-      width: 567px;
+      width: 100%;
+      height: 100%;
     }
     &:hover {
       background: $primary;
