--- a/src/styles/aboutPage.scss
+++ b/src/styles/aboutPage.scss
@@ -23,7 +23,7 @@
   &__conteiner {
     padding: 92px 0 41px 0;
     display: flex;
-    //@media screen and (max-width: 1530px) {
+    //@media screen and (max-width: 1470px) {
     //  flex-direction: column-reverse;
     //}
   }
@@ -31,10 +31,16 @@
     position: relative;
     min-width: 550px;
     margin-right: 60px;
-    //@media screen and (max-width: 1530px) {
-    //  text-align: center;
-    //  margin-right: 0px;
-    //}
+    @media screen and (max-width: 1470px) {
+      //text-align: center;
+      margin-right: 0px;
+    }
+    @media screen and (min-width: 1024px) {
+      min-width: 444px;
+      h1 {
+        font-size: 40px;
+      }
+    }
     &-sphere {
       width: 53px;
     }
@@ -56,7 +62,6 @@
 
   &__images {
     position: relative;
-    //background: url(../images/repeats/waveBlue.png) no-repeat;
     background-position: left 60%;
     position: relative;
     &__market {
