--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -12,6 +12,7 @@ body {
   border: 2px solid transparent;
   height: 60px;
   width: 270px;
+  z-index: 3;
   color: $white;
   font-weight: 700;
   font-size: 15px;
@@ -28,6 +29,9 @@ body {
 .conteiner {
   width: 61%;
   margin: 0 auto;
+  @media screen and (max-width: 1470px) {
+    width: 81%;
+  }
 }
 .title {
   font-weight: 800;
