--- a/src/styles/aboutPage.scss
+++ b/src/styles/aboutPage.scss
@@ -3,6 +3,12 @@
   overflow: hidden;
   position: relative;
   &::before {
+    @media (max-width: 768px) {
+      top: 543px;
+      transform: rotateY(63deg);
+      left: 50px;
+      content: "";
+    }
     content: "";
     position: absolute;
     bottom: 41px;
@@ -13,6 +19,12 @@
     border-radius: 50%;
   }
   &::after {
+    @media (max-width: 768px) {
+      top: 543px;
+      transform: rotateY(63deg);
+      left: 50px;
+      content: "";
+    }
     content: url(../images/repeats/Layer.png);
     transform: rotateY(180deg);
     width: 171px;
@@ -23,23 +35,31 @@
   &__conteiner {
     padding: 92px 0 41px 0;
     display: flex;
-    //@media screen and (max-width: 1470px) {
-    //  flex-direction: column-reverse;
-    //}
+    @media screen and (max-width: 768px) {
+      flex-direction: column-reverse;
+      align-items: center;
+    }
   }
   &__content {
+    button {
+      @media (max-width: 1400px) {
+        transform: translateX(45px);
+      }
+    }
     position: relative;
-    min-width: 550px;
     margin-right: 60px;
-    @media screen and (max-width: 1470px) {
-      //text-align: center;
+    @media (min-width: 1470px) {
+      min-width: 550px;
+    }
+    @media (max-width: 1470px) {
+      max-width: 500px;
       margin-right: 0px;
     }
-    @media screen and (min-width: 1024px) {
-      min-width: 444px;
-      h1 {
-        font-size: 40px;
-      }
+    @media (max-width: 1200px) {
+      max-width: 450px;
+    }
+    @media (max-width: 1024px) {
+      max-width: 370px;
     }
     &-sphere {
       width: 53px;
@@ -64,10 +84,23 @@
     position: relative;
     background-position: left 60%;
     position: relative;
-    &__market {
-      width: 216%;
+    &-market {
+      @media screen and (max-width: 1470px) {
+        width: 124%;
+      }
     }
     &-ellips {
+      @media screen and (max-width: 600px) {
+        top: -20%;
+      }
+      @media screen and (max-width: 530px) {
+        width: 1100px;
+        height: 450px;
+      }
+      @media screen and (max-width: 400px) {
+        width: 1000px;
+        height: 400px;
+      }
       position: absolute;
       width: 1220px;
       height: 550px;
@@ -78,13 +111,39 @@
       z-index: -1;
     }
     &::before {
-      content: url(../images/aboutPage/CylinderBlue.png);
+      content: "";
+      background: url(../images/aboutPage/CylinderBlue.png);
       position: absolute;
+      background-size: contain;
+      background-repeat: no-repeat;
+      width: 100%;
+      height: 56px;
       top: 0;
       left: calc(50% - 131px);
+
+      @media screen and (max-width: 1024px) {
+        width: 94px;
+        left: 25%;
+      }
+      @media screen and (max-width: 950px) {
+        width: 74px;
+        left: 25%;
+      }
     }
   }
   &__content-title {
+    @media screen and (max-width: 1470px) {
+      font-weight: 800;
+      font-size: 44px;
+    }
+    @media screen and (max-width: 1200px) {
+      font-size: 38px;
+      margin-bottom: 40px;
+    }
+    @media screen and (max-width: 1024px) {
+      font-size: 30px;
+      margin-bottom: 25px;
+    }
     font-weight: 900;
     font-size: 50px;
     line-height: 125%;
