--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -4,6 +4,10 @@
   background-color: $primary;
   &__logo {
     padding-right: 30px;
+    z-index: 3;
+    @media (max-width: 1024px) {
+      padding-right: 15px;
+    }
   }
   &__conteiner {
     display: flex;
@@ -13,18 +17,23 @@
     width: 170px;
     height: 38px;
     @media (max-width: 1200px) {
-      width: 130px;
+      width: 120px;
     }
     @media (max-width: 1024px) {
-      display: none;
+      width: 100px;
+      font-weight: 24px;
+      font-size: 13px;
     }
-    @media (max-width: 769px) {
-      display: block;
-      width: 10px;
-      height: 10px;
-      background-color: $white;
-      border-radius: 50%;
-      overflow: hidden;
+
+    @media (max-width: 880px) {
+      width: 84px;
+      height: 28px;
+      font-weight: 24px;
+      font-size: 13px;
+      font-weight: 500;
+    }
+    @media (max-width: 768px) {
+      display: none;
     }
 
     &:hover {
@@ -40,23 +49,83 @@
     display: flex;
     gap: 30px;
     align-items: center;
+    @media (max-width: 1024px) {
+      gap: 5px;
+    }
   }
+  &__dots {
+    position: relative;
+    cursor: pointer;
+    z-index: 2;
+    transition: all 0.4s;
+    width: 40px;
+    span,
+    &::after,
+    &::before {
+      transition: all 0.5s;
+      width: 10px;
+      height: 10px;
+      background: $white;
+      z-index: 2;
+      border-radius: 50%;
+    }
+
+    &::after,
+    &::before {
+      display: none;
+      content: "";
+      position: absolute;
+      top: 0;
+    }
+    &::after {
+      left: 30px;
+    }
+    &::before {
+      left: 15px;
+    }
+    @media (max-width: 768px) {
+      span,
+      &::after,
+      &::before {
+        display: block;
+      }
+    }
+    &-active {
+      margin-right: 50px;
+      span {
+        transform: translateX(26px);
+      }
+      &::after,
+      &::before {
+        width: 30px;
+        border-radius: 4px;
+      }
+      &::after {
+        width: 30px;
+        transform: matrix(1, -1, 0, 1, -13, 0);
+        border-radius: 4px;
+      }
+      &::before {
+        width: 30px;
+        transform: matrix(1, 1, 0, 1, 2, 0);
+        border-radius: 4px;
+      }
+    }
+  }
+
   &__menu {
     display: flex;
     gap: 16px;
     color: $white;
+
     li {
       padding: 10px;
       border: 2px solid transparent;
+      border-radius: 5px;
       transition: all 0.3s;
-    }
-    @media (min-width: 768px) {
-      -webkit-overflow-scrolling: touch;
-      width: calc(100vw - 100%);
-      overflow: hidden;
-      li {
-        border-radius: 5px;
 
+      cursor: pointer;
+      @media (min-width: 768px) {
         &:hover {
           cursor: pointer;
           border: 2px solid $green;
@@ -67,21 +136,42 @@
           border: 2px solid $white;
         }
       }
+
+      @media (max-width: 1024px) {
+        padding: 5px;
+        gap: 0;
+      }
+    }
+    @media (max-width: 1024px) {
+      gap: 0;
     }
     @media (max-width: 768px) {
+      transform: rotateX(270deg);
+      &-active {
+        transition: all 0.7s;
+        display: flex;
+        transform: rotateX(0);
+        opacity: 1;
+        z-index: 1;
+      }
+      z-index: 0;
+
+      //display: none;
+      opacity: 0;
       flex-direction: column;
       align-items: center;
       justify-content: center;
       gap: 6px;
       position: absolute;
-      background: aqua;
+      background: $primary;
       width: 100%;
       top: 0;
       left: 0;
       height: 100vh;
       z-index: 2;
       li {
-        &:hover {
+        &:hover,
+        &:active {
           border-bottom: 2px solid $white;
         }
       }
