--- a/src/styles/aboutPage.scss
+++ b/src/styles/aboutPage.scss
@@ -4,10 +4,11 @@
   position: relative;
   &::before {
     @media (max-width: 768px) {
-      top: 543px;
-      transform: rotateY(63deg);
-      left: 50px;
-      content: "";
+      top: 30px;
+      border: 2px solid #75e169;
+      width: 100px;
+      height: 65px;
+      left: -50px;
     }
     content: "";
     position: absolute;
@@ -17,20 +18,30 @@
     height: 180px;
     border: 2px solid #67aefc;
     border-radius: 50%;
+    z-index: -2;
   }
   &::after {
     @media (max-width: 768px) {
-      top: 543px;
-      transform: rotateY(63deg);
-      left: 50px;
-      content: "";
+      top: 50%;
+      transform: rotateY(45deg);
+      left: 0px;
     }
-    content: url(../images/repeats/Layer.png);
+    @media (max-width: 568px) {
+      top: 40%;
+    }
+    @media (max-width: 580px) {
+      top: 37%;
+    }
+    content: "";
+    background: url(../images/repeats/Layer.png) no-repeat;
+    background-size: contain;
     transform: rotateY(180deg);
+    height: 100px;
     width: 171px;
     position: absolute;
-    bottom: 75px;
-    left: 100px;
+    bottom: 55px;
+    left: 65px;
+    z-index: -1;
   }
   &__conteiner {
     padding: 92px 0 41px 0;
@@ -42,8 +53,11 @@
   }
   &__content {
     button {
-      @media (max-width: 1400px) {
-        transform: translateX(45px);
+      @media (min-width: 768px) and (max-width: 1400px) {
+        transform: translateX(75%);
+      }
+      @media (max-width: 768px) {
+        width: 100%;
       }
     }
     position: relative;
@@ -61,8 +75,18 @@
     @media (max-width: 1024px) {
       max-width: 370px;
     }
+    @media (max-width: 768px) {
+      max-width: 100%;
+      margin-top: 60px;
+    }
     &-sphere {
       width: 53px;
+      position: absolute;
+      left: -84px;
+      top: -25px;
+      @media (max-width: 768px) {
+        display: none;
+      }
     }
     &-text {
       width: 87%;
@@ -73,11 +97,6 @@
       color: #111111;
       margin-bottom: 58px;
     }
-  }
-  &__content-sphere {
-    position: absolute;
-    left: -84px;
-    top: -25px;
   }
 
   &__images {
@@ -143,6 +162,10 @@
     @media screen and (max-width: 1024px) {
       font-size: 30px;
       margin-bottom: 25px;
+    }
+    @media (max-width: 768px) {
+      font-size: 27px;
+      color: $black;
     }
     font-weight: 900;
     font-size: 50px;
