--- a/src/styles/aboutDevelopment.scss
+++ b/src/styles/aboutDevelopment.scss
@@ -6,9 +6,15 @@
   @media (max-width: 768px) {
     padding: 43px 0;
   }
-  &__conteiner {
-    //overflow-x: auto;
-  }
+  //&__conteiner {
+  //  @media (max-width: 768px) {
+  //    overflow: auto;
+  //    &::-webkit-scrollbar {
+  //      width: 0;
+  //    }
+  //  }
+  //}
+
   &::after {
     content: "";
     background: url(../images/repeats/GreySphere.png);
@@ -60,6 +66,7 @@
     padding: 55px 10px;
     @media (max-width: 1800px) {
       gap: 0;
+      padding: 10px;
     }
     @media (max-width: 1500px) {
       flex-direction: column;
@@ -95,7 +102,13 @@
       height: 100%;
       align-items: center;
       justify-content: center;
-      margin-top: 10px;
+      margin: 10px 0;
+      img {
+        @media (max-width: 768px) {
+          width: 230px;
+          height: 230px;
+        }
+      }
     }
   }
 }
