--- a/src/styles/exemples.scss
+++ b/src/styles/exemples.scss
@@ -3,17 +3,26 @@
   background-color: $secondary;
   padding: 121px 0;
   position: relative;
+  @media (max-width: 768px) {
+    padding: 30px 0;
+  }
   &:before {
     position: absolute;
     content: url(../images/exemples/waveDecoration.png);
     top: 17%;
     left: 5%;
+    @media (max-width: 1470px) {
+      content: "";
+    }
   }
   &::after {
     position: absolute;
     content: url(../images/exemples/Sphere.png);
     bottom: 17%;
     right: 5%;
+    @media (max-width: 1470px) {
+      bottom: -4%;
+    }
   }
 
   &__content {
@@ -24,6 +33,15 @@
     justify-content: space-between;
     row-gap: 27px;
     margin-top: 51px;
+    @media (max-width: 480px) {
+      overflow: hidden;
+      max-height: 916px;
+      flex-direction: column;
+      gap: 14px;
+    }
+    @media (max-width: 360px) {
+      max-height: 693px;
+    }
   }
   &__item {
     width: 49%;
@@ -31,6 +49,9 @@
     color: #fff;
     transition: 0.3s;
     position: relative;
+    @media (max-width: 480px) {
+      min-width: 100%;
+    }
     div {
       text-align: center;
       opacity: 0;
