--- a/src/styles/exemples.scss
+++ b/src/styles/exemples.scss
@@ -3,9 +3,15 @@
   background-color: $secondary;
   padding: 121px 0;
   position: relative;
-  @media (max-width: 768px) {
+  @media (max-width: 480px) {
     padding: 30px 0;
   }
+  //&__conteiner {
+  //  @media (max-width: 480px) {
+  //    //width: 100%;
+  //    overflow: hidden;
+  //  }
+  //}
   &:before {
     position: absolute;
     content: url(../images/exemples/waveDecoration.png);
@@ -21,7 +27,7 @@
     bottom: 17%;
     right: 5%;
     @media (max-width: 1470px) {
-      bottom: -4%;
+      bottom: -7%;
     }
   }
 
@@ -34,8 +40,8 @@
     row-gap: 27px;
     margin-top: 51px;
     @media (max-width: 480px) {
-      overflow: hidden;
-      max-height: 916px;
+      //overflow: hidden;
+      max-height: 923px;
       flex-direction: column;
       gap: 14px;
     }
