--- a/src/styles/aboutPage.scss
+++ b/src/styles/aboutPage.scss
@@ -57,7 +57,7 @@
         transform: translateX(75%);
       }
       @media (max-width: 768px) {
-        width: 100%;
+        margin: 0 auto;
       }
     }
     position: relative;
@@ -77,7 +77,10 @@
     }
     @media (max-width: 768px) {
       max-width: 100%;
-      margin-top: 60px;
+      //margin-top: 60px;
+    }
+    @media (max-width: 480px) {
+      margin-top: 30px;
     }
     &-sphere {
       width: 53px;
@@ -96,6 +99,9 @@
       line-height: 25px;
       color: #111111;
       margin-bottom: 58px;
+      @media (max-width: 768px) {
+        width: 100%;
+      }
     }
   }
 
