--- a/src/styles/exemples.scss
+++ b/src/styles/exemples.scss
@@ -3,15 +3,12 @@
   background-color: $secondary;
   padding: 121px 0;
   position: relative;
+  @media (max-width: 1024px) {
+    padding: 43px 0;
+  }
   @media (max-width: 480px) {
     padding: 30px 0;
   }
-  //&__conteiner {
-  //  @media (max-width: 480px) {
-  //    //width: 100%;
-  //    overflow: hidden;
-  //  }
-  //}
   &:before {
     position: absolute;
     content: url(../images/exemples/waveDecoration.png);
@@ -23,11 +20,19 @@
   }
   &::after {
     position: absolute;
-    content: url(../images/exemples/Sphere.png);
+    content: "";
+    background: url(../images/exemples/Sphere.png);
+    background-size: cover;
+    width: 108px;
+    height: 108px;
     bottom: 17%;
     right: 5%;
     @media (max-width: 1470px) {
-      bottom: -7%;
+      bottom: -3%;
+    }
+    @media (max-width: 768px) {
+      width: 58px;
+      height: 58px;
     }
   }
 
