--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -6,33 +6,82 @@
   font-size: 20px;
   line-height: 24px;
   text-align: center;
+  @media (max-width: 768px) {
+    padding: 47px 0 150px 0;
+  }
   &__conteiner {
     display: flex;
     gap: 107px;
     margin-bottom: 120px;
+    @media (max-width: 1280px) {
+      gap: 0;
+      justify-content: space-between;
+    }
+    @media (max-width: 1024px) {
+      flex-direction: column;
+      gap: 40px;
+      margin-bottom: 56px;
+    }
+    @media (max-width: 768px) {
+      align-items: center;
+    }
   }
   &__logo {
     transform: translateY(-14px);
+    @media (max-width: 768px) {
+      margin: 0 auto;
+    }
   }
-  &__information-main {
-    display: flex;
-    width: 700px;
-    flex-wrap: wrap;
-    justify-content: space-between;
+  &__information {
+    &-main {
+      display: flex;
+      width: 700px;
+      flex-wrap: wrap;
+      justify-content: space-between;
+
+      @media (min-width: 1024px) {
+        padding-right: 20px;
+      }
+      @media (max-width: 1000px) {
+        width: 100%;
+      }
+      @media (max-width: 768px) {
+        flex-direction: column;
+        gap: 30px;
+        max-width: 321px;
+      }
+    }
+    &-additional {
+      min-width: 133px;
+      cursor: pointer;
+    }
   }
   &__contacts {
     &-item {
       display: flex;
       gap: 10px;
       margin-bottom: 13px;
+      cursor: pointer;
+      p {
+        @media (max-width: 390px) {
+          font-size: 15px;
+        }
+      }
     }
   }
   &__messengers {
     display: flex;
     gap: 37px;
+    @media (max-width: 390px) {
+      gap: 30px;
+    }
+    img {
+      cursor: pointer;
+    }
   }
-  &____copyright {
+  &__copyright {
     font-size: 18px;
     line-height: 175%;
+    padding: 0 20px;
   }
 }
