--- a/src/styles/MoreInformations.scss
+++ b/src/styles/MoreInformations.scss
@@ -21,6 +21,12 @@
     position: absolute;
     top: 22%;
     left: 11%;
+    @media (max-width: 1400px) {
+      top: 5%;
+    }
+    @media (max-width: 1024px) {
+      display: none;
+    }
   }
 
   &__conteiner {
@@ -51,10 +57,6 @@
       @media (max-width: 1024px) {
         margin: 0 auto;
       }
-      //@media (min-width: 768px) and (max-width: 1024px) {
-      //  width: 50%;
-      //  margin: 0 auto;
-      //}
     }
     p {
       padding: 53px 0 45px 0;
