--- a/src/styles/aboutDevelopment.scss
+++ b/src/styles/aboutDevelopment.scss
@@ -36,12 +36,15 @@
     position: absolute;
     bottom: 6%;
     right: 12%;
+    background-size: cover;
     @media (max-width: 768px) {
-      background-size: cover;
       width: 85px;
       height: 31px;
-      bottom: 12%;
+      bottom: 9%;
       right: 6%;
+    }
+    @media (max-width: 480px) {
+      display: none;
     }
   }
   &__slider {
