--- a/src/styles/exemples.scss
+++ b/src/styles/exemples.scss
@@ -4,10 +4,15 @@
   padding: 121px 0;
   position: relative;
   @media (max-width: 1024px) {
-    padding: 43px 0;
+    padding: 80px 0;
   }
   @media (max-width: 480px) {
     padding: 30px 0;
+  }
+  &__conteiner {
+    @media (max-width: 480px) {
+      overflow: hidden;
+    }
   }
   &:before {
     position: absolute;
@@ -30,7 +35,7 @@
     @media (max-width: 1470px) {
       bottom: -3%;
     }
-    @media (max-width: 768px) {
+    @media (max-width: 1024px) {
       width: 58px;
       height: 58px;
     }
