--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -2,6 +2,19 @@
 .header {
   padding: 18px 0;
   background-color: $primary;
+  transform: translateY(-95px);
+  transition: 0.3s;
+  position: fixed;
+  width: 100%;
+  z-index: 6;
+  &.show {
+    transform: translateY(0px);
+    //background: #000;
+  }
+  //position: fixed;
+  //width: 100%;
+  //z-index: 6;
+
   &__logo {
     padding-right: 30px;
     z-index: 3;
