--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -7,6 +7,7 @@
   position: fixed;
   width: 100%;
   z-index: 6;
+
   &.show {
     transform: translateY(0px);
     //background: #000;
@@ -102,6 +103,9 @@
       &::before {
         display: block;
       }
+    }
+    &-acive > body {
+      overflow: hidden;
     }
     &-active {
       span {
