--- a/src/styles/discussProject.scss
+++ b/src/styles/discussProject.scss
@@ -8,15 +8,18 @@
     padding: 42px 0;
   }
   &__messege {
+    display: inline-block;
+    padding: 20px;
+    background: $green;
+    border-radius: 10px;
+    position: absolute;
+    color: $white;
+    right: 3%;
+    font-size: 20px;
+    opacity: 0;
+    transition: 0.5s;
     &.show {
-      display: inline-block;
-      padding: 20px;
-      background: $green;
-      border-radius: 10px;
-      position: absolute;
-      color: $white;
-      right: 3%;
-      font-size: 20px;
+      opacity: 1;
     }
   }
 
