--- a/src/styles/aboutDesign.scss
+++ b/src/styles/aboutDesign.scss
@@ -77,6 +77,7 @@
     overflow: hidden;
     margin-bottom: 10px;
     z-index: 5;
+    position: relative;
     &.open {
       margin-bottom: 0;
       border-radius: 15px 15px 0 0;
