--- a/src/styles/discussProject.scss
+++ b/src/styles/discussProject.scss
@@ -9,7 +9,9 @@
   }
   &__messege {
     display: inline-block;
-    padding: 20px;
+    padding: 15px;
+    min-width: 200px;
+    line-height: 140%;
     background: $green;
     border-radius: 10px;
     position: absolute;
