--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -12,9 +12,41 @@
     transform: translateY(0px);
     //background: #000;
   }
-  //position: fixed;
-  //width: 100%;
-  //z-index: 6;
+  &__portfolio {
+    display: flex;
+    align-items: center;
+    overflow: hidden;
+    position: relative;
+    background-color: $primary;
+    padding: 10px;
+    gap: 7px;
+    z-index: 5;
+    cursor: pointer;
+
+    &-conteiner {
+    }
+    &-errow {
+      width: 16px;
+      fill: $white;
+      transition: 0.5s;
+      &.open {
+        transform: rotateX(180deg);
+      }
+    }
+    &-list {
+      background-color: $primary;
+      position: fixed;
+      transform: translateY(-50px);
+      opacity: 0;
+      transition: 0.3s;
+      pointer-events: none;
+      &.show {
+        pointer-events: all;
+        opacity: 1;
+        transform: translateY(0px);
+      }
+    }
+  }
 
   &__logo {
     padding-right: 30px;
@@ -133,6 +165,7 @@
     display: flex;
     gap: 16px;
     color: $white;
+    align-items: center;
 
     li {
       padding: 10px;
