--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -40,6 +40,12 @@
       opacity: 0;
       transition: 0.3s;
       pointer-events: none;
+      border-radius: 5px 5px 0 0;
+      li {
+        @media (min-width: 768) {
+          padding-right: 65px;
+        }
+      }
       &.show {
         pointer-events: all;
         opacity: 1;
@@ -96,7 +102,7 @@
     gap: 30px;
     align-items: center;
     @media (max-width: 1024px) {
-      gap: 5px;
+      gap: 20px;
     }
   }
   &__dots {
@@ -195,18 +201,17 @@
       gap: 0;
     }
     @media (max-width: 768px) {
-      transform: rotateX(270deg);
       &-active {
-        transition: all 0.7s;
         display: flex;
         transform: rotateX(0);
         opacity: 1;
+        transition: all 0.7s;
         z-index: 1;
       }
+      transform: rotateX(270deg);
       z-index: 0;
-
       opacity: 0;
-      flex-direction: column;
+      flex-direction: column-reverse;
       align-items: center;
       justify-content: center;
       gap: 6px;
@@ -216,7 +221,6 @@
       top: 0;
       left: 0;
       height: 100vh;
-      z-index: 2;
       li {
         &:hover,
         &:active {
