--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -24,6 +24,7 @@
     border: 2px solid transparent;
     z-index: 5;
     transition: 0.5s;
+    cursor: pointer;
     @media (min-width: 768px) {
       &:hover {
         cursor: pointer;
@@ -58,7 +59,9 @@
       border-radius: 5px 5px 0 0;
       @media (max-width: 768px) {
         font-size: 30px;
-        padding: 0 0 10px 10px;
+        padding: 0 0 10px 60px;
+        margin-right: 50%;
+        transform: translate(500px, -285px);
       }
       li {
         @media (min-width: 768) {
@@ -70,7 +73,7 @@
         opacity: 1;
         transform: translateY(0px);
         @media (max-width: 768px) {
-          transform: translateY(30px);
+          transform: translate(0px, -285px);
         }
       }
     }
@@ -246,8 +249,8 @@
       z-index: 0;
       opacity: 0;
       flex-direction: column-reverse;
-      justify-content: start;
-      padding-top: 150px;
+      padding-top: 40px;
+      justify-content: center;
       position: absolute;
       background: $primary;
       width: 100%;
